# portfolio_dashboard

./: .gitignore  Agents.md  README.md  pyproject.toml  requirements.txt  test_intc_live_quote.py  testscript.py  testscriptpyoutput.txt
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
portfolio_dashboard/: __init__.py  analytics.py  app.py  config.py  db.py  market_data.py  risk_free.py  symbols.py  sync.py  webull.py
scripts/: dev_dashboard.sh
tests/: test_analytics.py  test_app.py  test_config.py  test_db.py  test_market_data.py  test_risk_free.py  test_webull.py
